# prompting-benchmark

./: .gitignore  pyproject.toml
prompting_benchmark/benchmark/: benchmark.py  benchmark_suite.py  benchmark_suite_addition.py  benchmark_suite_object_counting.py  benchmark_suite_set_tracking.py  prompt_strategies.py  prompt_strategies_test.py  score_fns.py  task.py
prompting_benchmark/models/: __init__.py  huggingface.py  model.py
prompting_benchmark/task_generation/: set_tracking.py
results/: GPT2-object-counting_2022-07-12--11-37.json
tasks/: object-counting.json
tasks/benchmark-suite-defs/: 2-digit-addition.json  object-counting.json  set_tracking.json
tasks/examples/: 2-digit-addition.json  set_tracking.json
