[tool.poetry]
name = "prompting-benchmark"
version = "0.1.0"
description = ""
authors = ["Tamera Lanham"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.20.1"
accelerate = "^0.10.0"
tqdm = "^4.64.0"
word2number = "^1.1"
deepspeed = "^0.6.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
